# Trefoil-Language-Interpreters

./: Makefile  README.md
java/: .gitignore
java/Trefoil-v1/: LANGUAGE.md
java/Trefoil-v1/src/: Trefoil.java
java/Trefoil-v1/tst/: TrefoilTest.java
java/Trefoil-v2/: FEEDBACK.md  LANGUAGE.md
java/Trefoil-v2/src/parser/: PSTParser.java  PeekCharReader.java  Tokenizer.java
java/Trefoil-v2/src/trefoil2/: Binding.java  Expression.java  Interpreter.java  ParenthesizedSymbolTree.java  Trefoil2.java
java/Trefoil-v2/tst/: Trefoil2Test.java
ocaml/Trefoil-v3/: LANGUAGE.md
ocaml/Trefoil-v3/src/: ast.ml  dune  errors.ml  interpreter.ml  pst.ml  pstparser.ml  trefoil3.ml  trefoil3test.ml
