(executable
 (name trefoil3)
 (libraries trefoil3lib)
 (modules trefoil3))

(library
 (name trefoil3lib)
 (modules errors ast pst pstparser interpreter)
 (preprocess (pps ppx_deriving.show)))

(library
 (name trefoil3test)
 (modules trefoil3test)
 (libraries trefoil3lib)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(env
  (dev
    (flags (:standard -warn-error -A))))